# Musicophile

./: DemoVideo.webm  README.md
SrcCode/: CMakeLists.txt
SrcCode/src/: mysql.config  network.cpp  network.h
SrcCode/src/client/: audio.cpp  audio.h  client.cpp  client.h  main.cpp  ui.h
SrcCode/src/server/: mainServer.cpp  server.cpp  server.h
Valgrind_Reports/: Valgrind_Client_Logs  Valgrind_Server_Logs
